<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.sumit.a8080.agriculture.HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/homeToolbar">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/farmer"/>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:id="@+id/farmView"
                android:src="@drawable/farm"
                android:background="@color/pink" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text="@string/FarmView"
                android:textSize="20dp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_margin="16dp"
                android:id="@+id/weather"
                android:src="@drawable/we"
                android:scaleType="fitCenter"
                android:background="#FFFFFF"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:text="@string/Weather"
                android:textSize="20dp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_margin="16dp"
                android:background="#FFFFFF"
                android:src="@drawable/deal"
                android:scaleType="fitCenter"
                android:id="@+id/Dealers"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:text="@string/Dealers"
                android:textSize="20dp"
                android:textStyle="normal|bold" />
        </LinearLayout>
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/money"
                android:scaleType="fitCenter"
                android:id="@+id/market"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/MarketPrice"
                android:textSize="20dp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_margin="16dp"
                android:id="@+id/machinery"
                android:scaleType="fitCenter"
                android:src="@drawable/machinery"
                android:background="@android:color/holo_red_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:text="@string/Machinery"
                android:textSize="20dp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_margin="16dp"
                android:id="@+id/near_location"
                android:src="@drawable/nearby"
                android:scaleType="fitCenter"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text="@string/Location"
                android:textSize="20dp"
                android:textStyle="normal|bold" />
        </LinearLayout>
    </GridLayout>
</LinearLayout>